<resources>
    <string name="app_name">Manu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="halo_selamat_datang">Halo! Selamat Datang</string>
    <string name="profile_picture">A Profile Picture</string>
    <string name="cth_pabrik_furnitur">Cth: Pabrik Furnitur</string>
    <string name="pabrik_rekomendasi">Pabrik Rekomendasi</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup_intro">Buat akunmu terlebih dahulu yuk agar kami bisa mengenal kamu lebih lanjut!</string>
    <string name="nama">Nama</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="login">Login</string>
    <string name="signin_intro">Selamat datang kembali! Tolong masukkan data akunmu</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun_daftar_disini">Belum punya akun? Daftar disini</string>
    <string name="sudah_punya_akun_klik_disini">Sudah punya akun? Klik disini</string>
    <string name="sign_out">Sign Out</string>
    <string name="introduction_title">Ayo kenali Manu lebih jauh lagi!</string>
    <string name="apa_itu_manu">Apa itu Manu?</string>
    <string name="mulai_dari">Mulai dari</string>
    <string name="deskripsi_pabrik">Deskripsi Pabrik</string>
    <string name="Semua">Semua</string>
    <string name="manu_logo">Manu Logo</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="cari_transaksi">Cari Transaksi</string>
    <string name="detail_transaksi">Detail Transaksi</string>
    <string name="back_button">back button</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="transfer">Transfer</string>
    <string name="jumlah_barang">Jumlah Barang</string>
    <string name="_100_buah">100 Buah</string>
    <string name="strip">-</string>
    <string name="biaya_asuransi">Biaya Asuransi</string>
    <string name="rp15_000_00">Rp15.000,00</string>
    <string name="tanggal_pemesanan">Tanggal Pemesanan</string>
    <string name="nama_pabrik">Nama Pabrik</string>
    <string name="status_pemesanan">Status Pemesanan</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="id_pemesanan">ID Pemesanan</string>
    <string name="total_belanja">Total Belanja</string>
    <string name="pesan">Pesan</string>
</resources>