<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.TransactionDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/backTransactionDetailBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/circle_background"
            android:contentDescription="@string/back_button"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_transaksi"
            android:textSize="20sp"
            android:layout_marginLeft="15dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginVertical="2dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="ID Pemesanan"
            android:layout_weight="1"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/orderIdTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strip"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/metode_pembayaran"
            android:layout_weight="1"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transfer"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginVertical="2dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_pemesanan"
            android:layout_weight="1"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/transactionDateTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strip"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginVertical="2dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nama_pabrik"
            android:layout_weight="1"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/factoryNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strip"
            android:textStyle="bold"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="15dp"
        android:background="@color/divider_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginVertical="2dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/jumlah_barang"
            android:layout_weight="1"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_100_buah"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginVertical="2dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Total Belanja"
            android:layout_weight="1"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/totalPriceTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strip"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginVertical="2dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/biaya_asuransi"
            android:layout_weight="1"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp15_000_00"
            android:textStyle="bold"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="15dp"
        android:background="@color/divider_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginVertical="2dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total_pembayaran"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/grandTotalTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strip"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </LinearLayout>




</LinearLayout>