<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/halo_selamat_datang"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Patrick Acongsen"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/circleImageView"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/profile_picture"
                android:contentDescription="@string/profile_picture" />
        </LinearLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/roundedImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ads_banner"
            android:adjustViewBounds="true"
            app:shapeAppearanceOverlay="@style/RoundedImageViewShape"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/searchBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/white"
            app:cardElevation="2dp"
            app:contentPadding="15dp"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cari Pabrik yang Anda Butuhkan"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginEnd="10dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="0dp"
                        app:strokeColor="@color/light_grey"
                        app:strokeWidth="1dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:layout_gravity="center"
                            android:text="@string/cth_pabrik_furnitur"
                            android:textColor="@color/light_grey"/>
                    </com.google.android.material.card.MaterialCardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/manu_blue"
                        app:cardElevation="0dp"
                        app:contentPadding="15dp"
                        app:cardCornerRadius="15dp">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/explore"
                            app:tint="@color/white"/>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Pabrik Rekomendasi"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>



</FrameLayout>